hphp/test/zend/bad/ext-date/date-parse-by-format001.php
<?php
$date = "06/08/04";
print_r( date_parse_from_format( '!m/d/y', $date ) );
print_r( date_parse_from_format( '!m*d*y', $date ) );
?> 